add images directory

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <!-- saved from url=(0022)http://site.baidu.com/ -->
 <HTML>
 <HEAD>
 <TITLE>Morlet's Homepage</TITLE>
-<META http-equiv=Content-Type content="text/html; charset=gb2312">
+<META http-equiv=Content-Type content="text/html"; charset="gb2312">
 <meta name="unknow" content="won't tell you">
 <LINK href="stylesheets/myhomesite.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY onload=document.f.word.focus()>
-<!--<SCRIPT src="百度网址大全.files/site.js"></SCRIPT>--> 
 <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%--> 
 <!--这是上半部分开始-->
-<DIV id=header class="bordercolor_R"> <img height=100% alt="来自网络的图片" src="http://img2.imgtn.bdimg.com/it/u=2421762437,1882100407&fm=21&gp=0.jpg" />
-    <DIV  id=headerRight class="bordercolor_Y"> <A href="http://www.weather.com.cn/html/weather/101181601.shtml?">天气预报</A> <A href="http://fy.iciba.com/">段落翻译</A> <A href="http://www.cnblogs.com/213cy/">空间</A> <A href="https://calendar.yahoo.com/?view=notepad">notepad</A> <A href="http://cang.baidu.com/">收藏</A> <A href="http://www.cnblogs.com/213cyy/">| 另一主页 |</A>
+<DIV id=header class="bordercolor_R"> <img height=100% alt="images" src="images/snoopy.jpg" />
+    <DIV  id=headerRight class="bordercolor_Y"> <A href="http://www.weather.com.cn/html/weather/101181601.shtml?">天气预报</A> <A href="http://fy.iciba.com/">段落翻译</A> <A href="http://www.cnblogs.com/213cy/">空间</A> <A href="https://calendar.yahoo.com/?view=notepad">notepad</A> <A href="http://cang.baidu.com/">收藏</A> <A href="http://213cy.github.io/home/">| 另一主页 |</A>
         <FORM id=f1 name=f action=https://www.baidu.com/s method=get >
             <INPUT class=formInput id=kww
             onmouseover=this.focus(); onfocus=this.select(); size=20 name=word autocomplete="off">
