--- a/index.html
+++ b/index.html
@@ -106,13 +106,16 @@
                     href="http://blogs.mathworks.com/pick/">Pick of the Week</A></li>
                 <li><A
                     href="http://www.mathworks.cn/academia/student_center/tutorials/index.html">交互式教程 </A> </li>
+	<li><A
+                    href="http://www.mathworks.cn/videos/tech-talks/controls/index.html?s_tid=ac_mi_techtalks_043013">Bode Plots </A></li>
             </ul>
             <ul>
                 <span>控制系统</span>
+
                 <li><A
-                    href="http://www.mathworks.cn/videos/tech-talks/controls/index.html?s_tid=ac_mi_techtalks_043013">Understanding Bode Plots </A></li>
-                <li><A
-                    href="http://www.ilovematlab.cn/home.php?mod=space&uid=43&do=blog&view=me&from=space&page=2"> 柚籽</A></li>
+                    href="https://docs.python.org/3/">Python Doc</A></li>
+	<li><A
+                    href="https://github.com/213cy">GitHub</A></li>
             </ul>
             <ul class="BGcolor">
                 <span>公开课</span>
