add matlab trend

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <!-- saved from url=(0022)http://site.baidu.com/ -->
 <HTML>
 <HEAD>
@@ -98,7 +98,7 @@
                 <li><A
                     href="http://www.ilovematlab.cn/forum.php?mod=guide&view=newthread">ilovematlab</A></li>
                 <li><A
-                    href="http://www.mathworks.cn/company/events/webinars/index.html">matlab研讨会</A></li>
+                    href="http://cn.mathworks.com/matlabcentral/trendy/trends/2321">Matlab Trends</A></li>
             </ul>
             <ul class="BGcolor">
                 <span>ll</span>
