--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%--> 
 <!--这是上半部分开始-->
 <DIV id=header class="bordercolor_R"> <img height=100% alt="images" src="images/snoopy.jpg" />
-    <DIV  id=headerRight class="bordercolor_Y"> <A href="http://www.weather.com.cn/html/weather/101181601.shtml?">天气预报</A> <A href="http://fy.iciba.com/">段落翻译</A> <A href="http://www.cnblogs.com/213cy/">空间</A> <A href="https://calendar.yahoo.com/?view=notepad">notepad</A> <A href="http://cang.baidu.com/">收藏</A> <A href="http://213cy.github.io/home/">| 另一主页 |</A>
+    <DIV  id=headerRight class="bordercolor_Y"> <A href="http://www.weather.com.cn/html/weather/101181601.shtml?">天气预报</A> <A href="http://fy.iciba.com/">段落翻译</A> <A href="https://github.com/cyfile/My-file">便笺</A> <A href="https://calendar.yahoo.com/?view=notepad">notepad</A> <A href="http://cang.baidu.com/">收藏</A> <A href="http://213cy.github.io/home/">| 另一主页 |</A>
         <FORM id=f1 name=f action=https://www.baidu.com/s method=get >
             <INPUT class=formInput id=kww
             onmouseover=this.focus(); onfocus=this.select(); size=20 name=word autocomplete="off">
@@ -89,7 +89,7 @@
         <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%--> 
         <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%-->
 
-        <h3 class=BGcolor>网站收藏</h3>
+        <h3 class=BGcolor><A  href="1.html">网站收藏</A></h3>
         <DIV id=mywebsite class="bordercolor_B">
             <ul>
                 <span>MATLAB</span>
@@ -106,16 +106,17 @@
                     href="http://blogs.mathworks.com/pick/">Pick of the Week</A></li>
                 <li><A
                     href="http://www.mathworks.cn/academia/student_center/tutorials/index.html">交互式教程 </A> </li>
-	<li><A
-                    href="http://www.mathworks.cn/videos/tech-talks/controls/index.html?s_tid=ac_mi_techtalks_043013">Bode Plots </A></li>
             </ul>
             <ul>
                 <span>控制系统</span>
 
-                <li><A
+	<li><A
                     href="https://docs.python.org/3/">Python Doc</A></li>
 	<li><A
-                    href="https://github.com/213cy">GitHub</A></li>
+                    href="https://github.com/">GitHub</A></li>
+	<li><A
+                    href="http://cyfile.github.io/My-file/">Blog</A></li>
+	        
             </ul>
             <ul class="BGcolor">
                 <span>公开课</span>
@@ -138,7 +139,8 @@
             </ul>
         </DIV>
     </DIV>
-    <div class="clear">&nbsp;|&nbsp;<A href="1.html">误入者留名</A>&nbsp;|&nbsp;</div>
+    <div class="clear">&nbsp;|&nbsp;<A 	  
+	 href="https://github.com/213cy/home/issues">误入者留名</A>&nbsp;|&nbsp;</div>
     <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%--> 
     <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%--> 
 
