--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <span>控制系统</span>
 
 	<li><A
-                    href="https://docs.python.org/3/">Python Doc</A></li>
+                    href="https://msdn.microsoft.com/en-us/library/windows/desktop/ff818516(v=vs.85).aspx">Windows API</A></li>
 	<li><A
                     href="https://github.com/">GitHub</A></li>
 	<li><A
