--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 href="http://weibo.com/morlet/home">新浪微博</A></li>
             <li><A
                 href="http://mail.sohu.com/">搜狐邮箱</A></li>
+            <li><A
+                href="http://mail.qq.com/">QQ邮箱</A></li>
             </ul>
     </DIV>
     <!--这是一段注释。注释不会在浏览器中显示。--> 
