--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <li><A
                     href="http://www.ilovematlab.cn/forum.php?mod=guide&view=newthread">ilovematlab</A></li>
                 <li><A
-                    href="http://cn.mathworks.com/academia/student-competitions/">Student Competitions</A></li>
+                    href="http://cn.mathworks.com/academia/student-competitions/">Competitions</A></li>
             </ul>
             <ul class="BGcolor">
                 <span>ll</span>
