--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li><A
                     href="http://www.mathworks.cn/cn/help/index.html">Documentation</A></li>
                 <li><A
-                    href="http://www.ilovematlab.cn/forum.php?mod=guide&view=newthread">ilovematlab</A></li>
+                    href="http://ctms.engin.umich.edu/CTMS/index.php?example=Introduction&section=ControlPID">CTMS</A></li>
                 <li><A
                     href="http://cn.mathworks.com/academia/student-competitions/">Competitions</A></li>
             </ul>
