--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <li><A                
                     href="http://pan.baidu.com/share/home?uk=1982446902#category/type=0">飞得**49</A></li>
                 <li><A
-                    href="http://www.youku.com/playlist_show/id_18270248.html">石川</A></li>
+                    href="http://www.nev-dsc.com/matlab/tutorials/cruise-control/">CTMS</A></li>
             </ul>
         </DIV>
     </DIV>
