--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                 <li> <A
                     href="http://blogs.mathworks.com/pick/">Pick of the Week</A></li>
                 <li><A
-                    href="http://www.mathworks.cn/academia/student_center/tutorials/index.html">交互式教程 </A> </li>
+                    href="http://www.mathworks.cn/academia/student_center/tutorials/index.html">交互式教程</A> </li>
+                <li><A
+                    href="http://cn.mathworks.com/help/dsp/examples.html#d0e494">DSP System Toolbox</A> </li>
             </ul>
             <ul>
                 <span>控制系统</span>
