--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <li><A
                     href="http://www.mathworks.cn/academia/student_center/tutorials/index.html">交互式教程</A> </li>
                 <li><A
-                    href="http://cn.mathworks.com/help/dsp/examples.html#d0e494">DSP System Toolbox</A> </li>
+                    href="http://cn.mathworks.com/help/dsp/examples.html#d0e494">DSP Toolbox</A> </li>
             </ul>
             <ul>
                 <span>控制系统</span>
