--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <li><A
                     href="https://www.shiyanlou.com/login">实验楼</A></li>
                 <li><A
-                    href="http://www.gnu.org/software/bash/manual/bashref.html">BashManual</A></li>
+                    href="http://www.icourses.cn/jpk/viewCharacterDetail.action?courseId=3271&characId=42813">数学建模与数学实验</A></li>
 
             </ul>
             <ul>
