--- a/2.html
+++ b/2.html
@@ -1,1 +1,1 @@
-<iframe src="https://jp.pornhub.com/embed/ph5863ce88891f0" frameborder="0" width="560" height="340" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://jp.pornhub.com/embed/ph5863ce88891f0" frameborder="0" scrolling="no" allowfullscreen></iframe>
