--- a/2.html
+++ b/2.html
@@ -1,1 +1,1 @@
-<iframe src="https://jp.pornhub.com/embed/ph5863ce88891f0" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://jp.pornhub.com/embed/ph5863ce88891f0"  width="1000" height="600" frameborder="0" scrolling="no" allowfullscreen></iframe>
