--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
     <DIV id=rightSide class=" bordercolor_Y">
         <h3 class=BGcolor align="center"> 中央电视台 </h3>
         <div id=mmswebsite class="bordercolor_B"><A
-                href="http://bugu.cntv.cn/live_channelnews/index.shtml?type=380K"
-                >· CCTV-新闻</A><A
-                href="http://cctv.cntv.cn/lm/xinwenzhoukan/video/index.shtml"
-                >· 新闻周刊</A><A
-                href="http://cctv.cntv.cn/lm/jiankangzhilu/index.shtml"
-                >· 健康之路CNTV</A><A 
-                href="http://v.qq.com/search.html?ms_key=%E5%81%A5%E5%BA%B7%E4%B9%8B%E8%B7%AF"
-                >· 健康之路QQ</A>
+                href="https://github.com/cyfile/computer/issues"
+                >· Computer</A><A
+                href="https://github.com/cyfile/My-file/issues"
+                >· 杂项记录</A><A
+                href="https://github.com/cyfile/My-file"
+                >· 便笺</A><A 
+                href="https://github.com/213cy/home/tree/gh-pages"
+                >· 主页代码</A>
             <BR /><A 
                 href="http://finance.sina.com.cn/realstock/"
                 >· 股市概况</A><A  
