--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%--> 
 <!--这是上半部分开始-->
 <DIV id=header class="bordercolor_R"> <img height=100% alt="images" src="images/snoopy.jpg" />
-    <DIV  id=headerRight class="bordercolor_Y"> <A href="http://www.weather.com.cn/html/weather/101181601.shtml?">天气预报</A> <A href="http://fy.iciba.com/">段落翻译</A> <A href="https://github.com/cyfile/My-file/blob/master/README.md">便笺</A> <A href="https://calendar.yahoo.com/?view=notepad">notepad</A> <A href="https://github.com/cyfile/computer/tree/master/bookmark">收藏</A> <A href=http://213cy.github.io/home/1.html>| 另一主页 |</A>
+    <DIV  id=headerRight class="bordercolor_Y"> <A href="http://www.weather.com.cn/html/weather/101181601.shtml?">天气预报</A> <A href="http://fy.iciba.com/">段落翻译</A> <A href="https://github.com/cyfile/My-file/blob/master/README.md">便笺</A> <A href="https://calendar.yahoo.com/?view=notepad">notepad</A> <A href="https://github.com/cyfile/computer/tree/master/bookmark">收藏</A> <A href="http://213cy.github.io/home/1.html">| 另一主页 |</A>
         <FORM id=f1 name=f action=https://www.baidu.com/s method=get >
             <INPUT class=formInput id=kww
             onmouseover=this.focus(); onfocus=this.select(); size=20 name=word autocomplete="off">
